# ADAS-ECU-freertos

./: .gitignore  CMakeLists.txt  DEV_NOTES.md  Dockerfile  ENHANCEMENTS.md  README.md  docker-compose.yml  pyrightconfig.json  requirements.md  requirements.txt
.devcontainer/: devcontainer.json
docs/: COVERAGE_REPORT.md  ISO_26262_ASIL_D_ARTIFACTS.md  TEST_RESULTS_SUMMARY.md  TRACEABILITY_MATRIX.md
include/: FreeRTOSConfig.h  autosar_interfaces.hpp  can_fd_interface.hpp  can_interface.hpp  collision_detection.hpp  config.hpp  data_logger.hpp  hil_test_harness.hpp  kalman.hpp  multi_object_tracker.hpp  path_planner.hpp  safety.hpp  sensor_data.hpp
scripts/: build.sh  demo.sh  generate_coverage.sh  generate_mock_data.py  quick_start.sh  run_simulation.sh  send_lidar.sh  send_radar.sh  simulate_sensors.py  verify_container.sh  visualize_tracking.py
src/: autosar_services.cpp  can_fd_interface.cpp  can_interface.cpp  collision_detection.cpp  data_logger.cpp  hil_test_harness.cpp  kalman.cpp  main.cpp  multi_object_tracker.cpp  path_planner.cpp  safety.cpp  task_compute.cpp  task_sensor.cpp  task_watchdog.cpp
tests/: CMakeLists.txt  test_autosar_services.cpp  test_can_fd_interface.cpp  test_can_interface.cpp  test_collision_detection.cpp  test_kalman.cpp  test_multi_object_tracker.cpp  test_path_planner.cpp  test_safety.cpp
